--- a/test/app_root/config/database.yml
+++ b/test/app_root/config/database.yml
@@ -2,20 +2,30 @@ in_memory:
   adapter: sqlite3
   database: ":memory:"
   verbosity: quiet
+  pool: 5
+  timeout: 5000
 sqlite:
   adapter: sqlite
   dbfile: plugin_test.sqlite.db
+  pool: 5
+  timeout: 5000
 sqlite3:
   adapter: sqlite3
   dbfile: plugin_test.sqlite3.db
+  pool: 5
+  timeout: 5000
 postgresql:
   adapter: postgresql
   username: postgres
   password: postgres
   database: plugin_test
+  pool: 5
+  timeout: 5000
 mysql:
   adapter: mysql
   host: localhost
   username: root
   password:
   database: plugin_test
+  pool: 5
+  timeout: 5000
