Update rspec-rails to 2.0.0

--- a/test/rails_app/Gemfile
+++ b/test/rails_app/Gemfile
@@ -30,7 +30,7 @@ group :development, :test do
   gem 'database_cleaner'
   gem 'cucumber-rails'
   gem 'cucumber'
-  gem 'rspec-rails', ">= 2.0.0.beta.22"
+  gem 'rspec-rails', "2.0.0"
   gem 'spork'
   gem 'launchy'    # So you can do Then show me the page
 end
