I sleep N seconds step

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ Manifest
 .DS_Store
 rdoc
 test/rails_app/tmp/
-test/rails_app/public/extjs
+test/rails_app/public/extjs*
 test/rails_app/public/images/icons
 *.gem
 .vimrc
