* New "cache" option for `netzke_init` which gets passed to `javascript_include_tag` (no support for css caching of this type yet) * Netzke dynamic js and css-files such as ext.js, touch.css, now get generated at the application start, and put into "public/netzke". Solves a long standing problem with serving those files by HTTP servers in some cases. Enables caching naturally.

--- a/test/rails_app/Gemfile
+++ b/test/rails_app/Gemfile
@@ -7,6 +7,8 @@ gem 'rails', '3.0.4'
 
 gem 'sqlite3-ruby', :require => 'sqlite3'
 
+gem 'netzke-persistence', :path => File.expand_path('../vendor/gems/netzke-persistence', __FILE__)
+
 # Use unicorn as the web server
 # gem 'unicorn'
 
@@ -33,5 +35,4 @@ group :development, :test do
   gem 'rspec-rails'
   gem 'spork'
   gem 'launchy'    # So you can do Then show me the page
-  gem 'netzke-persistence'
 end
