--- a/test/core_test_app/Gemfile
+++ b/test/core_test_app/Gemfile
@@ -22,7 +22,7 @@ gem 'sqlite3'
 # Bundle gems for the local environment. Make sure to
 # put test-only gems in this group so their generators
 # and rake tasks are available in development mode:
-group :development, :test do
+group :test do
   gem 'capybara'
   gem 'database_cleaner'
   gem 'cucumber-rails'
