Use the main Gemfile also for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
   - 1.9.2
   - 1.9.3
 gemfile:
-  - test/core_test_app/gemfiles/rails3_2.gemfile
+  - test/core_test_app/Gemfile
 before_script: 
   - chmod 777 ./config/ci/before-travis.sh
   - ./config/ci/before-travis.sh
