Fix for issue #43
JS comments were erroneously stripped with a dumb method. Now using uglifier.

Conflicts:
	test/core_test_app/Gemfile
	test/core_test_app/Gemfile.lock

--- a/test/core_test_app/Gemfile
+++ b/test/core_test_app/Gemfile
@@ -4,6 +4,9 @@ gem 'rails', '~>3.2.0'
 
 gem 'sqlite3'
 
+gem 'uglifier'
+gem 'execjs'
+
 # Bundle gems for the local environment. Make sure to
 # put test-only gems in this group so their generators
 # and rake tasks are available in development mode:
