--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ test/core_test_app/public/extjs*
 test/core_test_app/vendor/gems/netzke-persistence
 test/core_test_app/public/javascripts
 test/core_test_app/public/stylesheets
+test/core_test_app/db/schema.rb
 *.gem
 .vimrc
 /extjs
