--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,8 @@ before_script:
   - ./config/ci/before-travis.sh
 script:
   - export DISPLAY=:99.0
-  - cd test/core_test_app
   - bundle exec rake db:create db:migrate RAILS_ENV=test
-  - bundle exec rspec spec
-  - bundle exec cucumber features
+  - bundle exec rake test
 branches:
   only:
     - master
