--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,7 @@ Manifest
 .DS_Store
 test/core_test_app/tmp/
 test/core_test_app/public/extjs*
-test/core_test_app/vendor/gems/netzke-persistence
-test/core_test_app/public/javascripts
-test/core_test_app/public/stylesheets
 test/core_test_app/db/schema.rb
 *.gem
 .vimrc
-/extjs
+Gemfile.lock
