Update travis.yml to include 0-12

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,21 @@
 language: ruby
+
 rvm:
   - 1.9.3
   - 2.2.3
+
+before_install:
+  - gem install bundler
+
 before_script: 
   - chmod 777 ./config/ci/before-travis.sh
   - ./config/ci/before-travis.sh
+
 script:
   - export DISPLAY=:99.0
   - EXTJS_SRC=cdn bundle exec rake
+
 branches:
   only:
     - master
+    - 0-12
